# CS336-assignment1-basics

./: Cargo.toml  pyproject.toml  writeup.md
cs336_basics/: pre_tokenize.py  rust_lib.pyi  tokenization_utils.py  tokenizer.py  train_bpe.py
cs336_basics/deprecated/: pre_tokenize.py  train_bpe.py
cs336_basics/nn/: __init__.py  attention.py  embedding.py  linear.py  rmsnorm.py  rope.py  softmax.py  swiglu.py  transformer.py
rust_lib/: utils.rs
src/: lib.rs  pre_tokenize.rs
src/bpe/: merge.rs  mod.rs  pre_tokenize.rs
tests/: adapters.py
