[package]
name = "rust_lib"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_lib"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
fancy-regex = "0.17.0"
indicatif = { version = "0.18.3", features = ["rayon"] }
memmap2 = "0.9.9"
pyo3 = "0.27.0"
rayon = "1.11.0"
regex = "1.12.2"
thread_local = "1.1.9"
